--- a/carrito/templates/carritos/carrito_list.html
+++ b/carrito/templates/carritos/carrito_list.html
@@ -1,131 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends 'carritos/base.html' %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catálogo de Mangas</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="productos.css">
-</head>
-
-<body class="Fondo_catalogo">
-
-  <!-- Encabezado de la página -->
-  <!-- Navbar -->
-  <nav id="barra" class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="index.html"><img class="logo" src="img/tsudonkuLogo.png" alt="ml-auto"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link text-warning" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="catalogo.html">Productos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="formulario.html">Contacto</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="ubicacion.html">Ubícanos</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-
-  <!-- Catálogo de mangas -->
-  <section id="catalogo">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2 id="titulopag" class="text-center text-warning">YA DISPONIBLE</h2>
-        </div>
-        {% for post in publicacion %}
-            <div class="card col-md-4">
-                <h2><a href="">{{ post.title }}</a></h2>
-                <h2> Precio {{ post.price }}</h2>
-                <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-        {% endfor %}
-      </div>
-    </div>
-
-    <div>
-      <p id="promocion-text">Tsundoku ofrece los mangas más emocionantes que pronto estarán disponibles para su compra.
-        Descubre nuevas
-        historias y personajes fascinantes y haz tu pedido ahora para ser uno de los primeros en disfrutar de estas
-        increíbles historias. Ofrecemos envío rápido y seguro para que puedas empezar a disfrutar de tus mangas lo antes
-        posible. ¡No te pierdas la oportunidad de elegir Tsundoku para tus compras de manga!</p>
-    </div>
-  </section>
-  <footer class="bg-dark text-light">
-    <div class="container py-4">
-      <div class="row">
-        <div class="col-md-4">
-          <p class="text-center"><img id="logoFinal" src="img/tsudonkuLogo.png" alt=""></p>
-          <p class="text-center"><i class="fa fa-map-marker"></i>Nos ubicamos en 467 Av. Valparaíso, Galería calle de
-            Cristal</p>
-          <p class="text-center"><i class="fa fa-envelope"></i> Email: TsundokuStore@gmail.com</p>
-          <p class="text-center"><i class="fa fa-phone"></i> Fono: +56 9 3310 3456</p>
-
-        </div>
-        <div class="col-md-4">
-          <h5 class="text-center">Redes Sociales</h5>
-          <ul class="list-unstyled">
-            <li>
-              <p class="text-center"><a href="index.html"><i class="fa fa-facebook"></i> Facebook</a></p>
-            </li>
-            <li>
-              <p class="text-center"><a href="index.html"><i class="fa fa-twitter"></i> Twitter</a></p>
-            </li>
-            <li>
-              <p class="text-center"><a href="index.html"><i class="fa fa-instagram"></i> Instagram</a></p>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h5 class="text-center">NOTICIAS</h5>
-          <p class="text-center">Suscríbete a nuestro boletín para recibir noticias y promociones.</p>
-          <form>
-            <div class="input-group">
-              <input type="email" class="form-control" placeholder="Correo electrónico">
-              <div class="input-group-append">
-                <button class="btn btn-primary" type="submit">Suscribirse</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-      <div id="centrarPie">
-        <hr>
-        <p class="text-center">© 2023 TsundokuStore. Todos los derechos reservados.</p>
-        <a id="insignea" class="text-center" href="http://www.w3.org/WAI/WCAG1AA-Conformance"
-          title="Explicación del Nivel Doble-A de Conformidad">
-          <img height="32" width="88" src="http://www.w3.org/WAI/wcag1AA" alt="Icono de conformidad  Doble-A"></a>
-      </div>
-    </div>
-  </footer>
-  
-  <!-- Enlaces a los archivos JavaScript de Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
-    crossorigin="anonymous"></script>
-  <script src="catalogo.js"></script>
-</body>
-
-</html>
+{% block content %}
+{% for post in publicacion %}
+<div class="card col-md-4">
+    <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+    <h2> Precio {{ post.price }}</h2>
+    <p>{{ post.text|linebreaksbr }}</p>
+</div>
+{% endfor %}
+{% endblock %}
