--- a/carrito/templates/carritos/base.html
+++ b/carrito/templates/carritos/base.html
@@ -1,59 +1,54 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catálogo de Mangas</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="productos.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/letras.css' %}">
+    
+
 </head>
 
-<body class="Fondo_catalogo">
-
-  <!-- Encabezado de la página -->
-  <!-- Navbar -->
-  <nav id="barra" class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="index.html"><img class="logo" src="img/tsudonkuLogo.png" alt="ml-auto"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link text-warning" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="catalogo.html">Productos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="formulario.html">Contacto</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="ubicacion.html">Ubícanos</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<body>
+    <!-- Navbar -->
+    <nav id="barra" class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" src="{% static 'img/tsudonkuLogo.png' %}" alt="ml-auto"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link text-warning" href="{% url 'index' %}">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'carrito_list' %}">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="formulario.html">Contacto</a>
+            </li>
+    
+            <li class="nav-item">
+              <a class="nav-link" href="ubicacion.html">Ubícanos</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
 
   <!-- Catálogo de mangas -->
   <section id="catalogo">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2 id="titulopag" class="text-center text-warning">YA DISPONIBLE</h2>
-        </div>
-        {% block content %}
-        {% endblock %}
-      </div>
-    </div>
-
+    {% block content %}
+    {% endblock %}
     <div>
       <p id="promocion-text">Tsundoku ofrece los mangas más emocionantes que pronto estarán disponibles para su compra.
         Descubre nuevas
@@ -66,7 +61,7 @@
     <div class="container py-4">
       <div class="row">
         <div class="col-md-4">
-          <p class="text-center"><img id="logoFinal" src="img/tsudonkuLogo.png" alt=""></p>
+          <p class="text-center"><img id="logoFinal" src="{% static 'img/tsudonkuLogo.png' %}" alt=""></p>
           <p class="text-center"><i class="fa fa-map-marker"></i>Nos ubicamos en 467 Av. Valparaíso, Galería calle de
             Cristal</p>
           <p class="text-center"><i class="fa fa-envelope"></i> Email: TsundokuStore@gmail.com</p>
