--- a/carrito/templates/carritos/post_detail.html
+++ b/carrito/templates/carritos/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'carritos/base.html' %}
 
 {% block content %}
-    <div class="post">
+    <div class="card col-md-4">
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
