--- a/carrito/templates/carritos/base.html
+++ b/carrito/templates/carritos/base.html
@@ -3,46 +3,52 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'css/letras.css' %}">
-    
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/letras.css' %}">
+
 
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav id="barra" class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" src="{% static 'img/tsudonkuLogo.png' %}" alt="ml-auto"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link text-warning" href="{% url 'index' %}">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'carrito_list' %}">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="formulario.html">Contacto</a>
-            </li>
-    
-            <li class="nav-item">
-              <a class="nav-link" href="ubicacion.html">Ubícanos</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <!-- Navbar -->
+  <nav id="barra" class="navbar navbar-expand-lg navbar-dark">
+    <a class="navbar-brand" href="{% url 'index' %}"><img class="logo" src="{% static 'img/tsudonkuLogo.png' %}"
+        alt="ml-auto"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link text-warning" href="{% url 'index' %}">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'carrito_list' %}">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="formulario.html">Contacto</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="ubicacion.html">Ubícanos</a>
+        </li>
+        <li class="nav-item">
+          {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+          {% endif %}
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
   <!-- Catálogo de mangas -->
@@ -104,7 +110,7 @@
       </div>
     </div>
   </footer>
-  
+
   <!-- Enlaces a los archivos JavaScript de Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
