--- a/carrito/templates/carritos/post_detail.html
+++ b/carrito/templates/carritos/post_detail.html
@@ -1,13 +1,17 @@
 {% extends 'carritos/base.html' %}
 
 {% block content %}
-    <div class="card col-md-4">
-        {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-        {% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.price|linebreaksbr }}</p>
+<div class="card col-md-4">
+    {% if post.published_date %}
+    <div class="date">
+        {{ post.published_date }}
     </div>
+    {% endif %}
+    {% if user.is_authenticated %}
+    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span
+            class="glyphicon glyphicon-pencil"></span></a>
+    {% endif %} 
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.price|linebreaksbr }}</p>
+</div>
 {% endblock %}
