--- a/carrito/templates/carritos/base.html
+++ b/carrito/templates/carritos/base.html
@@ -43,7 +43,7 @@
         </li>
         <li class="nav-item">
           {% if user.is_authenticated %}
-          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+          <a class="nav-link" href="{% url 'post_new' %}">subir post</a>
           {% endif %}
         </li>
       </ul>
@@ -56,7 +56,7 @@
     {% block content %}
     {% endblock %}
     <div>
-      <p id="promocion-text">Tsundoku ofrece los mangas más emocionantes que pronto estarán disponibles para su compra.
+      <p id="promocion-text" class="text-white">Tsundoku ofrece los mangas más emocionantes que pronto estarán disponibles para su compra.
         Descubre nuevas
         historias y personajes fascinantes y haz tu pedido ahora para ser uno de los primeros en disfrutar de estas
         increíbles historias. Ofrecemos envío rápido y seguro para que puedas empezar a disfrutar de tus mangas lo antes
