--- a/carrito/templates/carritos/index.html
+++ b/carrito/templates/carritos/index.html
@@ -1,6 +1,9 @@
 {% extends 'carritos/base.html' %}
 {% block content %}
 {% load static %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<link rel="stylesheet" href="{% static 'css/letras.css' %}">
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
 <div id="CarruselMenu" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#CarruselMenu" data-slide-to="0" class="active"></li>
