--- a/carrito/templates/carritos/base.html
+++ b/carrito/templates/carritos/base.html
@@ -10,12 +10,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-  <!-- Custom CSS -->
-  {% block link %}
-  {% endblock link %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-  <link rel="stylesheet" href="{% static 'css/letras.css' %}">
-  <script src="{% static 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAH7J--ygikgoeHi1DX6QaMQavI0quRunU}' %"></script>
+    {% block links %}
+    {% endblock links %}
+
+
+  <script src="{% static 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAH7J--ygikgoeHi1DX6QaMQavI0quRunU}' %}"></script>
   <script src="{% static 'js/ubicacion.js' %}"></script>
   
  
@@ -39,7 +38,7 @@
           <a class="nav-link" href="{% url 'carrito_list' %}">Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="formulario.html">Contacto</a>
+          <a class="nav-link" href="{% url 'formulario' %}">Contacto</a>
         </li>
 
         <li class="nav-item">
@@ -121,6 +120,9 @@
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
     crossorigin="anonymous"></script>
   <script src="catalogo.js"></script>
+
+  {% block script %}
+    {% endblock script %}
 </body>
 
 </html>
