--- a/carrito/templates/carritos/index.html
+++ b/carrito/templates/carritos/index.html
@@ -1,9 +1,15 @@
 {% extends 'carritos/base.html' %}
-{% block content %}
 {% load static %}
+
+{% block links %}
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 <link rel="stylesheet" href="{% static 'css/letras.css' %}">
-<link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% endblock links %}
+
+{% block content %}
+
+
+
 <div id="CarruselMenu" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#CarruselMenu" data-slide-to="0" class="active"></li>
@@ -12,7 +18,7 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block img-fluid" src="{% static 'img/berserk.gif' %}" alt="First slide">
+            <img id="carru" class="d-block img-fluid" src="{% static 'img/berserk.gif' %}" alt="First slide">
             <div class="text-container">
                 <h2>Berserk</h2>
                 <p>Es una historia de fantasía medieval que sigue al guerrero solitario Guts en su búsqueda de
@@ -24,7 +30,7 @@
 
         </div>
         <div class="carousel-item">
-            <img class="d-block img-fluid" src="{% static 'img/punpun.gif' %}" alt="Second slide">
+            <img id="carru" class="d-block img-fluid" src="{% static 'img/punpun.gif' %}" alt="Second slide">
             <div class="text-container">
                 <h2>Oyasumi PunPun</h2>
                 <p>Es un manga que sigue la vida de Punpun Onodera, un joven con apariencia de
@@ -37,7 +43,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block img-fluid" src="{% static 'img/one-piece.gif' %}" alt="Third slide">
+            <img id="carru" class="d-block img-fluid" src="{% static 'img/one-piece.gif' %}" alt="Third slide">
             <div class="text-container ">
                 <h2>One Piece</h2>
                 <p>Es una serie de manga y anime que sigue las aventuras del joven pirata Monkey D. Luffy y su
@@ -57,7 +63,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-<div id="fondo">
+<div id="fondo" >
 
     <!-- REFERENCIA DE TIENDA -->
     <div style="margin-top: 2cm;" class="container">
@@ -87,11 +93,11 @@
     </div>
 
     <div id="btn-stock">
-        <a href="catalogo.html">
+        <a href="{% url 'carrito_list' %}">
             <img src="{% static 'img/Stock (2).png' %}">
             <h3>¡Ya disponible!</h3>
         </a>
         <img src="{% static 'img/Chrollo.png' %}" alt="">
     </div>
 
-{% endblock %}
+{% endblock content %}
