--- a/carrito/templates/carritos/post_edit.html
+++ b/carrito/templates/carritos/post_edit.html
@@ -1,7 +1,14 @@
 {% extends 'carritos/base.html' %}
+{% load static %}
+{% block links %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<link rel="stylesheet" href="{% static 'css/letras.css' %}">
+{% endblock links %}
+
+
+
 
 {% block content %}
-
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary text-center" data-toggle="modal" data-target="#exampleModal">
@@ -9,24 +16,24 @@
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
+<div class="modal fade bg-secondary " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog ">
+        <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title text-white" id="exampleModalLabel">Nuevos Productos</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <h2>New post</h2>
+            <div class="modal-body text-white">
+                <h2>Insertar Datos:</h2>
                 <form method="POST" class="post-form">
                     {% csrf_token %}
                     <table>{{ form.as_p }}</table>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="submit" value="Submit" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary text-white" data-dismiss="modal">Close</button>
+                <button type="submit" value="Submit" class="btn btn-primary text-white">Save changes</button>
             </div>
         </form>
         </div>
