--- a/carrito/templates/carritos/post_edit.html
+++ b/carrito/templates/carritos/post_edit.html
@@ -11,31 +11,36 @@
 {% block content %}
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary text-center" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-</button>
+<div class="card">
+    <button type="button" class="btn btn-primary text-center" data-toggle="modal" data-target="#exampleModal">
+        Subir
+    </button>
 
-<!-- Modal -->
-<div class="modal fade bg-secondary " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog ">
-        <div class="modal-content bg-dark">
-            <div class="modal-header">
-                <h5 class="modal-title text-white" id="exampleModalLabel">Nuevos Productos</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+    <!-- Modal -->
+    <div class="modal fade bg-secondary " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog ">
+            <div class="modal-content bg-dark">
+                <div class="modal-header">
+                    <h5 class="modal-title text-white" id="exampleModalLabel">Nuevos Productos</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form method="POST" enctype="multipart/form-data" class="post-form">
+                    <div class="modal-body text-white">
+                        <h2>Insertar Datos:</h2>
+
+                        {% csrf_token %}
+                        {{ form.as_p }}
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary text-white" data-dismiss="modal">Close</button>
+                        <button type="submit" value="Submit" class="btn btn-primary text-white">Save changes</button>
+                    </div>
+                </form>
             </div>
-            <div class="modal-body text-white">
-                <h2>Insertar Datos:</h2>
-                <form method="POST" class="post-form">
-                    {% csrf_token %}
-                    <table>{{ form.as_p }}</table>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary text-white" data-dismiss="modal">Close</button>
-                <button type="submit" value="Submit" class="btn btn-primary text-white">Save changes</button>
-            </div>
-        </form>
         </div>
     </div>
 </div>
