--- a/carrito/templates/carritos/post_detail.html
+++ b/carrito/templates/carritos/post_detail.html
@@ -16,9 +16,10 @@
     </div>
     {% endif %}
     {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span
-            class="glyphicon glyphicon-pencil"></span></a>
-    {% endif %} 
+    <button type="button" class="btn btn-primary text-center" ><a href="{% url 'post_edit' pk=post.pk %}">Editar</a></button>
+    <button type="button" class="btn btn-primary text-center" ><a href="{% url 'eliminar_post' pk=post.pk %}">Borrar</a></button>
+    
+    {% endif %}
     <h2>{{ post.title }}</h2>
     <p>{{ post.price|linebreaksbr }}</p>
 </div>
