--- a/carrito/templates/carritos/post_detail.html
+++ b/carrito/templates/carritos/post_detail.html
@@ -9,18 +9,25 @@
 
 
 {% block content %}
-<div class="card col-md-4">
-    {% if post.published_date %}
-    <div class="date">
-        {{ post.published_date }}
+</div>
+<div class="row justify-content-md-center">
+    <div class="card col-md-4">
+        {% if post.upload %}
+                    <img class="card-img" src="{{post.upload.url}}" alt="imagen-producto" />
+            {% endif %}
+    
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.descripcion|linebreaksbr }}</p>
+        <h3 class="text-center">{{ post.price }} $</h3>
+    </div>
+</div>
+{% if user.is_authenticated %}
+    <div class="row justify-content-md-center">
+        <div class="card">
+            <button type="button" class="btn btn-primary text-center" ><a href="{% url 'post_edit' pk=post.pk %}">Editar</a></button>
+            <button type="button" class="btn btn-primary text-center" ><a href="{% url 'eliminar_post' pk=post.pk %}">Borrar</a></button>
+        </div>
     </div>
     {% endif %}
-    {% if user.is_authenticated %}
-    <button type="button" class="btn btn-primary text-center" ><a href="{% url 'post_edit' pk=post.pk %}">Editar</a></button>
-    <button type="button" class="btn btn-primary text-center" ><a href="{% url 'eliminar_post' pk=post.pk %}">Borrar</a></button>
-    
-    {% endif %}
-    <h2>{{ post.title }}</h2>
-    <p>{{ post.price|linebreaksbr }}</p>
-</div>
+<div>
 {% endblock %}
