--- a/carrito/templates/carritos/base.html
+++ b/carrito/templates/carritos/base.html
@@ -56,7 +56,7 @@
 
   <!-- Catálogo de mangas -->
   <section id="catalogo" class="container">
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-sm">
       {% block content %}
       {% endblock %}
     </div>
