--- a/carrito/static/css/letras.css
+++ b/carrito/static/css/letras.css
@@ -85,4 +85,9 @@ h1{
 #final2{
 padding-top: 7%;
 }
-
+/*imagenes ajustadas de carritooooooooooo*/
+.imagen-ajustada {
+  display: block;
+  height: 8.5cm; /* ajusta la altura según tus necesidades */
+  width: auto; /* para mantener la proporción original de la imagen */
+}
