--- a/carrito/static/css/styles.css
+++ b/carrito/static/css/styles.css
@@ -6,6 +6,9 @@ body {
   background-color: rgb(0, 0, 0);
 }
 
+#logoFinal{
+  max-width: 50%;
+}
 #fondo{
 background-image: url("/static/img/fondo.gif");
   background-size: cover;
