--- a/carrito/templates/carritos/index.html
+++ b/carrito/templates/carritos/index.html
@@ -19,21 +19,21 @@
         <img src="{% static 'img/berserk.gif' %}" class="d-block w-100" alt="...">
         <div class="text-container">
           <div class="text-center text-white">
-              <h5>berserk</h5>
-              <p>Es una historia de fantasía medieval que sigue al guerrero solitario Guts en su búsqueda de
+              <h5 class="text-center">Berserk</h5>
+              <p class="text-center">Es una historia de fantasía medieval que sigue al guerrero solitario Guts en su búsqueda de
                 venganza contra su antiguo amigo Griffith. La serie es conocida por su violencia gráfica, su
                 complejidad temática y su arte detallado, que captura la atmósfera sombría y gótica de la Edad
                 Media. Berserk explora temas como la amistad, la traición, la moralidad y el destino, lo que le
                 da una profundidad y complejidad única en su género.</p>
           </div>
-        </div>
+        </div >
       </div>
       <div class="carousel-item img-fluid">
         <img src="{% static 'img/punpun.gif' %}" class="d-block w-100" alt="...">
         <div class="text-container">
           <div class="text-center text-white ">
-              <h5>punpun</h5>
-              <p>Es un manga que sigue la vida de Punpun Onodera, un joven con apariencia de
+              <h5 class="text-center">punpun</h5>
+              <p class="text-center">Es un manga que sigue la vida de Punpun Onodera, un joven con apariencia de
                 pájaro, mientras atraviesa la difícil transición de la infancia a la adultez. La historia
                 explora temas como el amor, la soledad, la depresión y la búsqueda de sentido en la vida. A
                 medida que avanza, el tono se vuelve más oscuro y reflexiona sobre la vida y las relaciones
@@ -47,8 +47,8 @@
         <img src="{% static 'img/one-piece.gif' %}" class="d-block w-100" alt="...">
         <div class="text-container">
           <div class="text-center text-white">
-              <h5>one piece</h5>
-              <p>Es una serie de manga y anime que sigue las aventuras del joven pirata Monkey D. Luffy y su
+              <h5 class="text-center">one piece</h5>
+              <p class="text-center">Es una serie de manga y anime que sigue las aventuras del joven pirata Monkey D. Luffy y su
                 tripulación en su búsqueda del tesoro más grande del mundo. Con personajes memorables,
                 emocionantes batallas y una trama épica, la serie ha sido elogiada por su mundo detallado,
                 exploración de temas profundos y equilibrio entre la acción y el humor. Es una emocionante
