--- a/carrito/templates/carritos/pago.html
+++ b/carrito/templates/carritos/pago.html
@@ -32,7 +32,7 @@
             </button>
           </div>
         </div>
-        <div><img src="{% static 'img/transbank.png' %}" alt=""></div>
+        <div><img class="mx-auto" src="{% static 'img/transbank.png' %}" alt=""></div>
       </div>
     </div>
     
