--- a/carrito/templates/carritos/carrito_list.html
+++ b/carrito/templates/carritos/carrito_list.html
@@ -3,21 +3,53 @@
 
 {% block links %}
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<link rel="stylesheet" href="{% static 'css/letras.css' %}">
 <link rel="stylesheet" href="{% static 'css/productos.css' %}">
 {% endblock links %}
 {% load humanize %}
 {% block content %}
 <div class="card-deck">
   {% for post in publicacion %}
-        <div class="card text-white bg-dark mb-3">
-          <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-  
-          {% if post.upload %}
-                  <img class="card-img" src="{{post.upload.url}}" alt="imagen-producto" />
-          {% endif %}
-          <h2> Precio {{ post.price }}</h2>
-          <p>{{ post.text|linebreaksbr }}</p>
+  <div class="card text-white bg-dark mb-3">
+    <div class="producto" id="producto{{post.pk}}">
+      <h2 class="text_center"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+      {% if post.upload %}
+      <img class="card-img text-center imagen-ajustada " src="{{post.upload.url}}" alt="imagen-producto" />
+      {% endif %}
+      <h4 class="text-center"> Precio {{ post.price }}</h4>
+      <p>{{ post.text|linebreaksbr }}</p>
+
+      <button class="btn btn-primary" type="button" onclick="agregarAlCarrito('{{post.pk}}', '{{post.title}}', {{post.price}})">Agregar</button>
+      <button class="btn btn-danger" type="button" onclick="eliminarDelCarrito('{{post.pk}}')">Eliminar</button>
+    </div>
+  </div>
+  {% endfor %}
+</div>
+
+<div id="cardCarrito">
+  <div id="carritoText" class="card mb-3 bg-dark">
+    <div class="row no-gutters">
+      <div class="col-md-4 mx-auto ">
+        <img src="{% static 'img/carritologo.png' %}" alt="carrito" class="card-img">
       </div>
-      {% endfor %}
+      <div class="col-md-8">
+        <div class="card-body">
+          <h1 class="card-header">Carrito</h1>
+          <ul id="carrito" class="card-text text-light"></ul>
+          <p class="card-text text-warning">Total: $<span class="text-light" id="total"></span></p>
+          <div class="btn-group">
+            <button class="btn btn-primary" type="button" onclick="vaciarCarrito()">Vaciar carrito</button>
+            <button id="pagar" class="btn btn-primary mr-2" type="button" onclick="pagarCarrito()">Pagar Total</button>
+            <a id="pagar_total" href="{% url 'pago' %}"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
+
+{% block script %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<script src="{% static 'js/carrito.js' %}"></script>
+{% endblock script %}
