--- a/carrito/static/css/styles.css
+++ b/carrito/static/css/styles.css
@@ -4,15 +4,16 @@ body {
   font-size: 16px;
   color: #000000d7;
   background-color: rgb(0, 0, 0);
+  
+ 
 }
 
 #logoFinal{
   max-width: 50%;
 }
 #fondo{
-background-image: url("/static/img/fondo.gif");
-  background-size: cover;
-  max-width: 100%;
+  margin-top: 2%;
+  
 }
 
 .logo{
@@ -82,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Carrusel */
 
-#CarruselMenu{
+#carousel-item{
   margin-top: 0px;
   background-color: rgba(0, 0, 0, 0.877);
   
@@ -92,7 +93,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 200px;
 }
 
-#carruselMenu .carousel-item img{
+#carousel-item .carousel-item img{
   object-fit: cover;
   height: 100px; /* Ajusta este valor según tus necesidades */
 }
@@ -101,6 +102,9 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 80%;
 }
 
+#textoCarru{
+  background-color: #333;
+}
 
 
 
@@ -215,4 +219,7 @@ color: #ffffff;
 
 #contador_carrito{
   max-width: 100%;
+}
+#bloque{
+  margin-top: 2%;
 }
