--- a/carrito/templates/carritos/index.html
+++ b/carrito/templates/carritos/index.html
@@ -3,36 +3,41 @@
 
 {% block links %}
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<link rel="stylesheet" href="{% static 'css/stylesbg.css' %}">
 <link rel="stylesheet" href="{% static 'css/letras.css' %}">
 {% endblock links %}
 
 {% block content %}
-
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active img-fluid">
-        <img src="{% static 'img/berserk.gif' %}" class="d-block w-100" alt="...">
-        <div class="text-container">
-          <div class="text-center text-white">
-              <h5 class="text-center">Berserk</h5>
-              <p class="text-center">Es una historia de fantasía medieval que sigue al guerrero solitario Guts en su búsqueda de
-                venganza contra su antiguo amigo Griffith. La serie es conocida por su violencia gráfica, su
-                complejidad temática y su arte detallado, que captura la atmósfera sombría y gótica de la Edad
-                Media. Berserk explora temas como la amistad, la traición, la moralidad y el destino, lo que le
-                da una profundidad y complejidad única en su género.</p>
+<div>
+  <section class="container">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner text-center">
+        <div class="carousel-item active img-fluid">
+          <img src="{% static 'img/Berserk.gif' %}" class="d-block w-100" alt="...">
+          <div class=" text center">
+            <div id="textoCarru">
+              <div class=" carousel-caption d-none d-md-block ">
+                <h5 class="text-center text-warning ">Berserk</h5>
+                <p class="text-center">Es una historia de fantasía medieval que sigue al guerrero solitario
+                  Guts en su búsqueda de
+                  venganza contra su antiguo amigo Griffith. La serie es conocida por su violencia gráfica, su
+                  complejidad temática y su arte detallado, que captura la atmósfera sombría y gótica de la Edad
+                  Media. Berserk explora temas como la amistad, la traición, la moralidad y el destino, lo que le
+                  da una profundidad y complejidad única en su género.</p>
+              </div>
+            </div>
           </div>
-        </div >
-      </div>
-      <div class="carousel-item img-fluid">
-        <img src="{% static 'img/punpun.gif' %}" class="d-block w-100" alt="...">
-        <div class="text-container">
-          <div class="text-center text-white ">
-              <h5 class="text-center">punpun</h5>
+        </div>
+        <div class="carousel-item img-fluid">
+          <img src="{% static 'img/Punpun.gif' %}" class="d-block w-100" alt="...">
+          <div class="">
+            <div  class="carousel-caption d-none d-md-block ">
+              <h5 class="text-center">Oyasumi Punpun</h5>
               <p class="text-center">Es un manga que sigue la vida de Punpun Onodera, un joven con apariencia de
                 pájaro, mientras atraviesa la difícil transición de la infancia a la adultez. La historia
                 explora temas como el amor, la soledad, la depresión y la búsqueda de sentido en la vida. A
@@ -40,70 +45,74 @@
                 humanas. El manga destaca por su narrativa madura y estilo artístico distintivo. Sin embargo, se
                 advierte que contiene contenido maduro y puede abordar temas sensibles como la violencia y el
                 abuso..</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="carousel-item img-fluid">
-        <img src="{% static 'img/one-piece.gif' %}" class="d-block w-100" alt="...">
-        <div class="text-container">
-          <div class="text-center text-white">
-              <h5 class="text-center">one piece</h5>
-              <p class="text-center">Es una serie de manga y anime que sigue las aventuras del joven pirata Monkey D. Luffy y su
+        <div class="carousel-item img-fluid">
+          <img src="{% static 'img/One-piece.gif' %}" class="d-block w-100" alt="...">
+          <div class="text-container">
+            <div  class="carousel-caption d-none d-md-block">
+              <h5 class="text-center">One Piece</h5>
+              <p class="text-center">Es una serie de manga y anime que sigue las aventuras del joven pirata Monkey D.
+                Luffy y su
                 tripulación en su búsqueda del tesoro más grande del mundo. Con personajes memorables,
                 emocionantes batallas y una trama épica, la serie ha sido elogiada por su mundo detallado,
                 exploración de temas profundos y equilibrio entre la acción y el humor. Es una emocionante
                 epopeya pirata que ha cautivado a fans de todo el mundo durante más de dos décadas.</p>
+            </div>
           </div>
         </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </button>
-  </div>
+  </section>
 
 
-  <div id="fondo" >
+<div id="fondo" >
+    
 
     <!-- REFERENCIA DE TIENDA -->
     <div id="informacion" class="container">
-        <section id="ref_tienda" class="row">
+      <section id="ref_tienda" class="row">
 
-            <h5 id="parrafo-pagina" class="col-md-6 text-center">¡Bienvenido a nuestra tienda en línea de mangas!
-                Somos un sitio web
-                especializado en la venta de cómics
-                orientales, también conocidos como mangas. Si eres un fanático de la cultura japonesa y te encanta
-                leer
-                cómics, entonces estás en el lugar correcto.
-                Actualmente estámos en una versión Beta, pero puedes ver un poco nuestra mercancia! </h5>
-            <img id="logog" class="col-md-6" src="{% static 'img/tsudonkuLogo.png' %}" alt="logo">
+        <h5 id="parrafo-pagina" class="col-md-6 text-center">¡Bienvenido a nuestra tienda en línea de mangas!
+          Somos un sitio web
+          especializado en la venta de cómics
+          orientales, también conocidos como mangas. Si eres un fanático de la cultura japonesa y te encanta
+          leer
+          cómics, entonces estás en el lugar correcto.
+          Actualmente estámos en una versión Beta, pero puedes ver un poco nuestra mercancia! </h5>
+        <img id="logog" class="col-md-6" src="{% static 'img/tsudonkuLogo.png' %}" alt="logo">
 
-        </section>
-        <section id="ref_tienda2" class="row">
+      </section>
+      <section id="ref_tienda2" class="row">
 
-            <h5 id="parrafo-pagina2" class="col-md-12 text-center"> Si estás buscando algo nuevo para
-                leer o quieras completar tu colección de mangas favorita, aquí encontrarás lo que necesitas. Además,
-                ofrecemos envío a todo el mundo y precios competitivos para que puedas disfrutar de tus mangas
-                favoritos
-                sin tener que salir de casa. ¡Explora nuestra tienda en línea y encuentra tu próximo cómic favorito
-                hoy
-                mismo!</h5>
+        <h5 id="parrafo-pagina2" class="col-md-12 text-center"> Si estás buscando algo nuevo para
+          leer o quieras completar tu colección de mangas favorita, aquí encontrarás lo que necesitas. Además,
+          ofrecemos envío a todo el mundo y precios competitivos para que puedas disfrutar de tus mangas
+          favoritos
+          sin tener que salir de casa. ¡Explora nuestra tienda en línea y encuentra tu próximo cómic favorito
+          hoy
+          mismo!</h5>
 
-        </section>
+      </section>
     </div>
+  </div>
+  <div id="btn-stock">
+    <a href="{% url 'carrito_list' %}">
+      <img src="{% static 'img/Stock (2).png' %}">
+      <h3>¡Ya disponible!</h3>
+    </a>
+    <img src="{% static 'img/Chrollo.png' %}" alt="">
+  </div>
 </div>
-    <div id="btn-stock">
-        <a href="{% url 'carrito_list' %}">
-            <img src="{% static 'img/Stock (2).png' %}">
-            <h3>¡Ya disponible!</h3>
-        </a>
-        <img src="{% static 'img/Chrollo.png' %}" alt="">
-    </div>
 
 
 
